# mvpc

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  main.py  pyproject.toml  requirements.txt  setup.py
core/docker/: containers.py  docker_client.py  images.py
database/: connection.py  entity.py
database/docker/: images.py
docker_management/: containers.py  docker_client.py  images.py
dto/: docker.py
dto/common/: docker.py
dto/controllers/: container.py  image.py
utils/: datetime_utils.py
utils/docker/: dockerfile.py
web/: web_app.py
web/docker/: containers.py  images.py
web/setups/: scripts.py
