[tool.black]
line-length = 119
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.poetry]
name = "vcli"
version = "0.1.0"
description = ""
authors = ["Errodion <r.kuzmin.w@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
annotated-types = "<=0.6.0"
anyio = "<=4.3.0"
black = "<=24.4.0"
certifi = "<=2024.2.2"
charset-normalizer = "<=3.3.2"
click = "<=8.1.7"
docker = "<=7.0.0"
exceptiongroup = "<=1.2.1"
fastapi = "<=0.110.2"
h11 = "<=0.14.0"
httptools = "<=0.6.1"
idna = "<=3.7"
mypy-extensions = "<=1.0.0"
packaging = "<=24.0"
pathspec = "<=0.12.1"
platformdirs = "<=4.2.0"
pydantic = "<=2.7.0"
pydantic-core = "<=2.18.1"
python-dotenv = "<=1.0.1"
python-multipart = "<=0.0.9"
pyyaml = "<=6.0.1"
requests = "<=2.31.0"
sniffio = "<=1.3.1"
starlette = "<=0.37.2"
tomli = "<=2.0.1"
typing-extensions = "<=4.11.0"
urllib3 = "<=2.2.1"
uvicorn = "<=0.29.0"
uvloop = "<=0.19.0"
watchfiles = "<=0.21.0"
websockets = "<=12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
